fixed spacing and include stylesheet method

--- a/themes/askbryan/style.css
+++ b/themes/askbryan/style.css
@@ -25,6 +25,15 @@ CONTENTS:
 @import "reset.css";
 @import "bootstrap.min.css";
 
+html,body
+{
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden; 
+}
+
 div,
 article,
 section,
@@ -104,7 +113,7 @@ a.navbar-brand{
 05 Body ------------------------------------------------------------
 ---------------------------------------------------------------------------------------------------------- */
 .hero {
-	background: url('images/homescreen_background_image.jpg') no-repeat top center;
+	background: url('css/images/homescreen_background_image.jpg') no-repeat top center;
 	background-size: cover;
 	padding:75px 45px 50px 45px;
 	margin-top: -20px; 
